feat: 해시태그 입력 기능 구현  (#93)
* fix: 할일 수정 모달 담당자 없을 때 이미지 업로드 에러 해결

* feat: 해시태그 추가 컴포넌트 제작

* feat: 태그 입력 입력 제한(최대 5개)

* feat: 해시태그 컴포넌트 추가

* design: 해시태그 컴포넌트 css 수정

--- a/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
+++ b/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
@@ -73,6 +73,11 @@
   color: $black-33;
   resize: none;
   position: relative;
+
+  &:focus {
+    border-color: $main-yellow;
+    outline: none;
+  }
 }
 
 .form-input.form-description {
@@ -96,27 +101,10 @@
   color: $black-33;
   font-weight: 400;
   resize: none;
-}
-
-.calendar-icon-wrapper {
-  position: absolute;
-  right: 10px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-
-.calendar-icon {
-  width: 24px;
-  height: 24px;
-}
-
-.calendar-popup {
-  position: absolute;
-  top: 50px; /* 필요에 따라 조정 */
-  left: 0;
-  z-index: 1000; /* 다른 요소들 위에 표시되도록 설정 */
+  &:focus {
+    border-color: $main-yellow;
+    outline: none;
+  }
 }
 
 .sample-img {
