--- a/components/profileDropdown/index.module.scss
+++ b/components/profileDropdown/index.module.scss
@@ -1,12 +1,40 @@
 @use '@/styles/index.scss' as *;
 @import '@/styles/levels';
 
+@keyframes rotateAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(-10deg);
+  }
+}
+
 .dashboard-my {
   position: relative;
   @include Flex(row, flex-start, center);
   gap: 12px;
   height: 40px;
-  @include FontStyle('lg', 500, 'lg', 'lg');
+  @include FontStyle('lg', 600, 'lg', 'lg');
+  padding: 10px;
+  border-radius: 10px;
+
+  &:hover > div {
+    transform: rotateY(180deg);
+  }
+
+  & > div {
+    transition: all 1s ease;
+    box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);
+
+    background-color: white;
+    &:hover {
+      transform: rotateY(180deg);
+    }
+  }
 }
 
 .dashboard-my-icon {
@@ -31,6 +59,7 @@
 .dropdown {
   position: relative;
   width: fit-content;
+  cursor: pointer;
 
   & > article {
     position: absolute;
