feat: 폼 유효성 검사 (#95)
* refactor: 띄어쓰기 수정

* feat: form 유효성 검사(제목, 설명)

--- a/containers/dashboard/id/modals/components/hastagsInput/HashtagsInput.module.scss
+++ b/containers/dashboard/id/modals/components/hastagsInput/HashtagsInput.module.scss
@@ -14,12 +14,12 @@
 }
 
 .tags-input-error {
-    border-color: $red !important; // 에러 상태에서의 스타일
-  }
-  
-  .tags-input-normal {
-    border-color: $main-yellow; // 정상 상태에서의 스타일
-  }
+  border-color: $red !important; // 에러 상태에서의 스타일
+}
+
+.tags-input-normal {
+  border-color: $main-yellow;
+}
 
 .tags {
   @include Flex(row, null, center);
