--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -128,7 +128,21 @@
     color: $white;
     background-color: $main-yellow;
     border: 1px solid $main-yellow;
+
+    &:disabled {
+      background-color: $gray-d9 !important;
+      border: 1px solid $gray-d9;
+      color: $gray-78;
+      cursor: auto;
+    }
   }
+}
+.error-message {
+  color: $red;
+}
+
+.error-border {
+  border: 1px solid $red;
 }
 
 @include mobile {
