--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -54,3 +54,12 @@
     opacity: 0;
   }
 }
+
+@keyframes rotateClockwise {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(90deg);
+  }
+}
