--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -1,5 +1,12 @@
+@import './fonts';
+
 * {
   box-sizing: border-box;
+  font-family: 'Pretendard Variable', Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
+    'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 blockquote,
@@ -97,4 +104,20 @@ q:after {
 ol,
 ul {
   list-style: none;
+}
+
+// dark 모드 시 스크롤 까맣게
+body[data-theme='dark'] {
+  &::-webkit-scrollbar-track {
+    background-color: #171b1c;
+    &:hover {
+      background-color: #171b1c;
+    }
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-clip: padding-box;
+    background-color: #41474b;
+    border-radius: 10px;
+  }
 }
