fix: 대시보드 페이지 무한스크롤 수정 (#106)

--- a/containers/myDashboard/MyDashboard.module.scss
+++ b/containers/myDashboard/MyDashboard.module.scss
@@ -5,4 +5,5 @@
   @include ResponsiveGap(40, 48, 24);
   @include ResponsivePadding(0 40px, 0 40px, 0 24px);
   background-color: $gray-fa;
+  height: 100vh;
 }
