--- a/containers/myDashboard/invitedDashboard/InvitedDashboard.module.scss
+++ b/containers/myDashboard/invitedDashboard/InvitedDashboard.module.scss
@@ -4,7 +4,7 @@
   width: 1022px;
   @include Flex(column, null, null);
   gap: 20px;
-  padding: 32px 0;
+  padding: 32px 0 10px;
   @include border-radius(8px);
   background-color: $white;
   .title {
@@ -46,6 +46,9 @@
     margin-top: 4px;
     @include Flex(column, center, null);
     gap: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    overscroll-behavior: none;
     .invite-list-table-header {
       margin-left: 76px;
       @include Flex(row, space-between, center);
@@ -63,13 +66,14 @@
     .invite-list-table-body {
       @include Flex(column, null, null);
       gap: 20px;
-      // overflow-y: auto;
-      // overflow-x: hidden;
-      // overscroll-behavior: none;
+      height: 300px;
     }
   }
 }
 
+.empty-wrapper {
+  height: 300px;
+}
 @include tablet {
   .container {
     width: 504px;
@@ -125,4 +129,10 @@
       }
     }
   }
+}
+
+.ref {
+  height: 2px;
+  width: 100%;
+  opacity: 0;
 }
