--- a/containers/mypage/EditProfileForm.module.scss
+++ b/containers/mypage/EditProfileForm.module.scss
@@ -39,35 +39,34 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-
-  @include tablet {
-    gap: 20px;
-  }
 }
 
 .email-size {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.input {
-  width: 100%;
-  padding: 8px 16px;
-  border: 1px solid $gray-d9;
-  border-radius: 8px;
-  background-color: $white;
-  color: $black-4b;
-  font-size: 16px;
-  line-height: 1.5;
-
-  &:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-    box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
+  @include mobile {
+    margin-top: 40px;
   }
+  .input {
+    width: 100%;
+    padding: 15px 16px;
+    border: 1px solid $gray-d9;
+    border-radius: 8px;
+    background-color: $white;
+    color: $black-4b;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 26px;
 
-  color: $gray-9f;
+    &:focus {
+      outline: 2px solid transparent;
+      outline-offset: 2px;
+      box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
+    }
+
+    color: $gray-9f;
+  }
 }
 
 .nickname {
@@ -79,12 +78,12 @@
 
   .input {
     width: 100%;
-    padding: 8px 16px;
+    padding: 15px 16px;
     border: 1px solid $gray-d9;
     border-radius: 8px;
     background-color: $white;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 26px;
     color: $black-4b;
     &::placeholder {
       color: $gray-9f;
@@ -126,5 +125,6 @@
     height: 54px;
     padding: 0;
     margin-top: 16px;
+    margin-bottom: 24px;
   }
 }
