--- a/containers/mypage/PwdChangeForm.module.scss
+++ b/containers/mypage/PwdChangeForm.module.scss
@@ -21,5 +21,10 @@
     width: 100%;
     height: 54px;
     padding: 0;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    @include mobile {
+      margin-bottom: 16px;
+    }
   }
 }
