fix: 페이지 스타일링, 초대 대시보드 함수 수정 (#114)

--- a/containers/dashboardEdit/DashboardEdit.module.scss
+++ b/containers/dashboardEdit/DashboardEdit.module.scss
@@ -8,6 +8,7 @@
   .link {
     @include Flex(row, null, center);
     gap: 3px;
+    margin-right: auto;
     svg {
       transform: translateY(2px);
       rotate: 180deg;
@@ -15,10 +16,27 @@
   }
   .delete-button-wrapper {
     button {
-      @include ResponsiveWidth(620px, 544px, 284px);
-      background-color: $main-yellow;
-      color: white;
-      border: none;
+      @include ResponsiveWidth(700px, 544px, 284px);
+      background-color: $white;
+      color: $main-yellow;
+      border: 1px solid $main-yellow;
+      transition: 0.2s;
+      &:hover {
+        color: $main-yellow-active;
+        border: 1px solid $main-yellow-active;
+      }
     }
+  }
+}
+
+@include tablet {
+  .container {
+    @include Flex(column, null, center);
+  }
+}
+
+@include mobile {
+  .container {
+    @include Flex(column, null, center);
   }
 }
