--- a/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
+++ b/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
@@ -14,6 +14,18 @@
   border-radius: 16px;
   background-color: $white;
   padding: 32px;
+
+  &.dark {
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+    .form-label {
+      color: rgba($white, 0.87);
+    }
+    .button {
+      background-color: $dark-secondary-btn;
+      border: none;
+    }
+  }
 }
 
 .form {
@@ -147,7 +159,7 @@
 @include mobile {
   .container {
     padding: 24px 16px;
-    width: 327px;
+    width: 70%;
   }
 
   .modal-title {
