--- a/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
+++ b/containers/dashboard/id/modals/todoCreateModal/TodoCreateModal.module.scss
@@ -21,9 +21,19 @@
     .form-label {
       color: rgba($white, 0.87);
     }
+    .form-input {
+      background-color: $gray-d9;
+    }
+
     .button {
       background-color: $dark-secondary-btn;
       border: none;
+      &.yellow {
+        background-color: $main-yellow;
+      }
+    }
+    .date-input {
+      background-color: $gray-d9;
     }
   }
 }
@@ -85,7 +95,9 @@
   color: $black-33;
   resize: none;
   position: relative;
-
+  &::placeholder {
+    color: $gray-78;
+  }
   &:focus {
     border-color: $main-yellow;
     outline: none;
@@ -111,9 +123,17 @@
   color: $black-33;
   font-weight: 400;
   resize: none;
+  &::placeholder {
+    color: $gray-d9;
+    opacity: 0.7;
+  }
   &:focus {
     border-color: $main-yellow;
     outline: none;
+  }
+  &::-webkit-calendar-picker-indicator {
+    background-color: transparent;
+    cursor: pointer;
   }
 }
 
