--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -19,9 +19,18 @@
     .form-label {
       color: rgba($white, 0.87);
     }
+    .form-input {
+      background-color: $gray-d9;
+    }
     .button {
       background-color: $dark-secondary-btn;
       border: none;
+      &.yellow {
+        background-color: $main-yellow;
+      }
+    }
+    .date-input {
+      background-color: $gray-d9;
     }
   }
 }
@@ -86,6 +95,9 @@
   line-height: 26px;
   color: $black-33;
   resize: none;
+  &::placeholder {
+    color: $gray-78;
+  }
   &:focus {
     border-color: $main-yellow;
     outline: none;
@@ -98,19 +110,31 @@
 }
 
 .date-input {
-  border: 1px solid $gray-d9;
   width: 100%;
   height: 48px;
-  padding: 11px;
-  border-radius: 6px;
+  padding: 10px 15px;
   font-size: 16px;
-  line-height: 26px;
+  border: 1px solid $gray-d9;
+  border-radius: 6px;
+  background-color: $white;
   color: $black-33;
-  font-weight: 400;
-  resize: none;
+
+  &::placeholder {
+    color: $gray-78;
+  }
+  &.dark {
+    background-color: $gray-d9;
+  }
+
   &:focus {
     border-color: $main-yellow;
     outline: none;
+    background-color: $white;
+  }
+
+  &::-webkit-calendar-picker-indicator {
+    background-color: transparent;
+    cursor: pointer;
   }
 }
 
