style: 대시보드 페이지 다크모드 적용 (#116)
* style: 대시보드 페이지 다크모드 적용

* style: 드롭다운 다크모드 적용

--- a/components/ProfileIcon/ProfileIcon.module.scss
+++ b/components/ProfileIcon/ProfileIcon.module.scss
@@ -11,6 +11,7 @@
 
   @include Flex(row, center, center);
   position: relative;
+  transition: all 1s ease;
 
   &.dark {
     border: 2px solid rgba($white, 0.5);
