--- a/containers/dashboard/id/dropdown/SelectAssigneeDropdown/Assignee/index.module.scss
+++ b/containers/dashboard/id/dropdown/SelectAssigneeDropdown/Assignee/index.module.scss
@@ -3,6 +3,13 @@
 .assignee {
   @include Flex(row, null, center);
   gap: 6px;
+
+  &.dark {
+    > p {
+      // color: rgba($white, 0.87);
+      color: $dark-theme;
+    }
+  }
 }
 
 .profile-img {
