--- a/containers/dashboard/id/dropdown/kebabDropdown/KebabDropdown.module.scss
+++ b/containers/dashboard/id/dropdown/kebabDropdown/KebabDropdown.module.scss
@@ -12,6 +12,12 @@
 .kebab-dropdown {
   position: relative;
 
+  &.dark {
+    & > svg {
+      fill: rgba($white, 0.87);
+    }
+  }
+
   & > svg {
     width: 28px;
     height: 28px;
