--- a/components/profileDropdown/index.module.scss
+++ b/components/profileDropdown/index.module.scss
@@ -30,7 +30,7 @@
     transition: all 1s ease;
     box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);
 
-    background-color: white;
+    // background-color: white;
     &:hover {
       transform: rotateY(180deg);
     }
@@ -86,5 +86,11 @@
     cursor: pointer;
     background-color: $back-yellow;
     color: $main-yellow;
+  }
+}
+
+@include tablet {
+  .nickname {
+    display: none;
   }
 }
