--- a/containers/404/404.module.scss
+++ b/containers/404/404.module.scss
@@ -6,6 +6,32 @@
   @include Flex(column, center, center);
   gap: 10px;
 
+  .dark-img {
+    display: none;
+  }
+  .light-img {
+    display: block;
+  }
+
+  &.dark {
+    background-color: $dark-theme;
+
+    .title {
+      color: rgba($white, 0.87);
+    }
+
+    .content {
+      color: rgba($white, 0.6);
+    }
+
+    .dark-img {
+      display: block;
+    }
+    .light-img {
+      display: none;
+    }
+  }
+
   @include tablet {
     img {
       width: 100%;
