--- a/containers/dashboard/id/modals/todoModal/Comment/index.module.scss
+++ b/containers/dashboard/id/modals/todoModal/Comment/index.module.scss
@@ -8,92 +8,76 @@
   border-bottom: 1px solid $gray-d9;
   padding: 15px 2px;
 
-  &:last-child {
-    border: none;
-  }
-
-  .profile-img {
-    @include Size(34px);
-    background-color: $gray-d9;
-    border-radius: 50%;
-  }
-
-  .comment-contents {
-    @include Flex(column, null, null);
-    @include ResponsiveGap(12, 12, 16);
-    width: 100%;
-
-    .writer-and-date {
-      @include Flex(row, null, center);
-      gap: 8px;
-      position: relative;
-
-      & > svg {
-        position: absolute;
-        top: 0;
-        right: 0;
-      }
-    }
+  &.dark {
+    border-bottom: 1px solid $dark-card-top;
 
     .writer {
-      @include FontStyle(14, 600, 14, 12);
-      @include ResponsiveLineHeight(16, 16, 14);
+      color: rgba($white, 1);
     }
-
-    .date {
-      @include FontStyle(12, regular, 12, 10);
-      line-height: 14px;
-      color: $gray-9f;
-    }
-
     .comment-text {
-      @include FontStyle(14, regular, 14, 12);
-      @include ResponsiveLineHeight(16, 16, 18);
-      color: $black-33;
+      color: rgba($white, 0.87);
+    }
 
-      &.edit-comment {
-        position: relative;
-      }
-
+    .edit-comment {
       & > textarea {
-        border: 1px solid $gray-d9;
-        width: 100%;
-        height: 110px;
-        padding: 16px;
-        border-radius: 6px;
-        resize: none;
+        background-color: $gray-d9;
       }
 
       .button-wrapper {
-        position: absolute;
-        bottom: 12px;
-        right: 12px;
-        @include Flex(row, null, center);
-        gap: 6px;
+        button:nth-child(1) {
+          background-color: $dark-secondary-btn;
+          border: none;
+          color: white;
+        }
 
-        button {
-          @include ButtonStyle;
-          padding: 5px 20px;
+        button:nth-child(2) {
+          background-color: rgba($main-yellow, 0.87);
+          border: none;
+          color: white;
         }
       }
     }
+  }
 
-    .edit-and-delete {
-      margin-right: 3px;
-      @include Flex(row, null, center);
-      gap: 8px;
+  &:last-child {
+    border: none;
+  }
+}
 
-      .button {
-        background-color: transparent;
-        padding: 0;
-        @include FontStyle(12, regular, 12, 10);
-        @include ResponsiveLineHeight(15, 12, 12);
-        color: $gray-9f;
-      }
+.profile-img {
+  @include Size(34px);
+  background-color: $gray-d9;
+  border-radius: 50%;
+}
+
+.comment-contents {
+  @include Flex(column, null, null);
+  @include ResponsiveGap(12, 12, 16);
+  width: 100%;
+
+  .writer-and-date {
+    @include Flex(row, null, center);
+    gap: 8px;
+    position: relative;
+
+    & > svg {
+      position: absolute;
+      top: 0;
+      right: 0;
     }
   }
 }
 
+.writer {
+  @include FontStyle(14, 600, 14, 12);
+  @include ResponsiveLineHeight(16, 16, 14);
+}
+
+.date {
+  @include FontStyle(12, regular, 12, 10);
+  line-height: 14px;
+  color: $gray-9f;
+}
 .comment-header {
   @include Flex(row, space-between, null);
 }
@@ -102,4 +86,49 @@
   width: 1px;
   height: 80%;
   background-color: $gray-d9;
+}
+.button-wrapper {
+  position: absolute;
+  bottom: 12px;
+  right: 12px;
+  @include Flex(row, null, center);
+  gap: 6px;
+
+  button {
+    @include ButtonStyle;
+    padding: 5px 20px;
+  }
+}
+
+.edit-and-delete {
+  margin-right: 3px;
+  @include Flex(row, null, center);
+  gap: 8px;
+
+  .button {
+    background-color: transparent;
+    padding: 0;
+    @include FontStyle(12, regular, 12, 10);
+    @include ResponsiveLineHeight(15, 12, 12);
+    color: $gray-9f;
+  }
+}
+
+.comment-text {
+  @include FontStyle(14, regular, 14, 12);
+  @include ResponsiveLineHeight(16, 16, 18);
+  color: $black-33;
+
+  &.edit-comment {
+    position: relative;
+  }
+
+  & > textarea {
+    border: 1px solid $gray-d9;
+    width: 100%;
+    height: 110px;
+    padding: 16px;
+    border-radius: 6px;
+    resize: none;
+  }
 }
