--- a/containers/dashboard/id/modals/todoModal/TodoModal.module.scss
+++ b/containers/dashboard/id/modals/todoModal/TodoModal.module.scss
@@ -19,6 +19,25 @@
   @include ModalStyle;
   max-height: 90%;
   overflow-y: auto;
+
+  &.dark {
+    background-color: $dark-card;
+
+    .title {
+      color: rgba($white, 0.87);
+    }
+
+    .title-mobile {
+      color: rgba($white, 0.87);
+    }
+    .contents-text {
+      color: rgba($white, 0.87);
+    }
+
+    .icon {
+      fill: rgba($white, 0.87);
+    }
+  }
 }
 
 .modal-wrapper {
@@ -142,7 +161,7 @@
 
 .chips {
   @include Flex(row, null, center);
-  gap: 20px;
+  @include ResponsiveGap(20, 20, 15);
 }
 
 .border {
@@ -153,7 +172,8 @@
 
 .chip-card-list {
   @include Flex(row, null, center);
-  gap: 6px;
+  @include ResponsiveGap(6, 6, 4);
+  flex-wrap: wrap;
 }
 
 .kebab {
