--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -48,6 +48,7 @@ $dark-card: #41474b; // 위에 쌓이는 요소..? 원래 밝은색이었던것
 $dark-card-top: #63696d; // 더 위에
 $dark-chip: #787486;
 $dark-secondary-btn: #9fa6b2;
+$dark-dropdown: #858b8f;
 
 // 텍스트는 여기 참고, 투명도는 변수로 사용이 안 됩니다
 // rbga(#white, 0.87); // 고강도 텍스트
