styles: 다크모드 hover, actice 코드 추가 (#118)
Co-authored-by: mxkxx1011 <100355178+mxkxx1011@users.noreply.github.com>

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -48,6 +48,8 @@ $dark-card: #41474b; // 위에 쌓이는 요소..? 원래 밝은색이었던것
 $dark-card-top: #63696d; // 더 위에
 $dark-chip: #787486;
 $dark-secondary-btn: #9fa6b2;
+$dark-theme-hover: #2c2f30; // 다크 hover
+$dark-theme-active: #545758; // 다크 active
 $dark-dropdown: #858b8f;
 
 // 텍스트는 여기 참고, 투명도는 변수로 사용이 안 됩니다
