Fix: styles 수정(dark theme 적용 및 구조 수정) (#119)
* Feat: 로그인 및 회원가입 기능 구현

* Feat: 로그인 및 회원가입 기능 구현

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Feat: 로그인 및 회원가입 ui  구현

* Feat: /mypage 구현 및 디자인 제작

* FIX: 수정사항 적용

* FIX: 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정)

* FEET: 로그인, 회원가입, 비번 변경 Toast 생성 및 동의 모달 추가

* Chore: z-index 변경 되돌리기

* Chore: 복구

* FIX: /mypage, Toast, Modal 오류 수정

* Fix: 수정사항 적용중

* Fix: 수정사항 적용중

* Fix: 수정사항 적용중

* Fix: style 수정

* Fix: styles 수정(dark theme 적용 및 구조 수정)

---------

Co-authored-by: [K777agent] <[junzang00@gmail.com]>

--- a/containers/mypage/EditProfileForm.module.scss
+++ b/containers/mypage/EditProfileForm.module.scss
@@ -12,6 +12,11 @@
   @include mobile {
     display: block;
   }
+  &.dark {
+    .labels {
+      color: rgba($white, 0.87);
+    }
+  }
 }
 
 .image-box {
@@ -127,4 +132,8 @@
     margin-top: 16px;
     margin-bottom: 24px;
   }
+}
+
+.labels {
+  @include FontStyle('lg', 'regular', 'lg', 'md');
 }
