--- a/containers/sign/PwdLabel.module.scss
+++ b/containers/sign/PwdLabel.module.scss
@@ -2,11 +2,16 @@
 
 .container {
   @include Flex(column, null, null);
+  &.dark {
+    .label {
+      color: rgba($white, 0.87);
+    }
+  }
 }
 
 .label {
   margin-bottom: 10px;
-  font-size: 16px;
+  @include FontStyle(lg, regular);
   color: $black-33;
 }
 
@@ -22,7 +27,7 @@
   background-color: white;
   padding-left: 15px;
   padding-right: 45px; // 아이콘의 너비를 고려하여 오른쪽 패딩을 조정합니다.
-  font-size: 16px;
+  @include FontStyle(lg, regular);
   color: $black-33;
 
   &::placeholder {
@@ -46,6 +51,6 @@
 
 .error-message {
   margin-top: 8px;
-  font-size: 14px;
+  @include FontStyle(md, regular);
   color: $red;
 }
