--- a/containers/sign/AgreeModal.module.scss
+++ b/containers/sign/AgreeModal.module.scss
@@ -12,7 +12,24 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column; /* 모달 안의 요소를 세로로 정렬 */
+  &.dark {
+    background-color: $dark-theme;
+    p,
+    .title {
+      color: rgba($white, 0.87);
+    }
+    .close-button {
+      background-color: $dark-secondary-btn;
+      border: 1px solid $dark-secondary-btn;
+    }
+  }
   @include ModalStyle;
+  @include tablet {
+    max-width: 400px;
+  }
+  @include mobile {
+    max-width: 300px;
+  }
 }
 
 .modal-content {
@@ -45,4 +62,23 @@
   border-radius: 8px;
   width: 100%;
   height: 40px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 16px;
+}
+
+.sub-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 14px;
+}
+
+.content {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 6px;
+  margin-top: 6px;
 }
