--- a/containers/sign/SignForm.module.scss
+++ b/containers/sign/SignForm.module.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  &.dark {
+    .agree {
+      color: rgba($white, 0.87);
+    }
+  }
 }
 
 .agree {
