--- a/containers/sign/signin/index.module.scss
+++ b/containers/sign/signin/index.module.scss
@@ -2,13 +2,21 @@
 
 .box {
   display: flex;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
+  background-color: $white;
+
+  &.dark {
+    background-color: $dark-theme;
+    color: rgba($white, 0.87);
+    .member {
+      color: rgba($white, 0.87) !important;
+    }
+  }
 
   .login {
     width: 520px;
-    align-items: center;
-    justify-content: center;
     @include tablet {
       width: 520px;
     }
@@ -18,7 +26,9 @@
     .member {
       margin-top: 20px;
       text-align: center;
-      color: var($black-33);
+      color: $black-33;
+      @include FontStyle(16, 400);
+      line-height: 19.09px;
 
       .link {
         color: $violet;
