토스트 추가, 다크모드 스타일링추가 (#120)

--- a/components/Pagination/index.module.scss
+++ b/components/Pagination/index.module.scss
@@ -11,4 +11,9 @@
     width: 72px;
     white-space: nowrap;
   }
+  &.dark {
+    .pagination-number {
+      color: rgba($white, 0.6);
+    }
+  }
 }
